# chat

./: .env  Cargo.toml  README.md  app.yaml  test.rest
chat_server/: Cargo.toml
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  mod.rs
chat_server/src/models/: mod.rs  user.rs
chat_server/src/utils/: jwt.rs
migrations/: 20250509125012_initial.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  sse.rs
sql/: init.sql
src/: config.rs  main.rs
src/handlers/: messages.rs
