[package]
name = "chat_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true, features = ["std"] }
axum = { workspace = true }
chrono = { workspace = true }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
jwt-simple = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
